# systools-rust

./: Cargo.toml  Makefile
src/: lib.rs
tests/: catr.rs  echor.rs  false.rs  falser.rs  true.rs  truer.rs
tests/data/: bustle.txt
