[package]
name = "systools-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command line argument handler.
clap = "2.23"

[dev-dependencies]
# Crate to aid testing by placing built binaries on the path.
assert_cmd = "2.0.0"


[[bin]]
name = "truer"
path = "src/bin/truer.rs"

[[bin]]
name = "falser"
path = "src/bin/falser.rs"

[[bin]]
name = "echor"
path = "src/bin/echor.rs"
