[package]
name = "systools-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command line argument handler.
clap = "2.23"

[dev-dependencies]
# Integration testing for executable binaries.
assert_cmd = "2.0.0"
# Unit testing 
predicates = "1"


[[bin]]
name = "truer"
path = "src/bin/truer.rs"

[[bin]]
name = "falser"
path = "src/bin/falser.rs"

[[bin]]
name = "echor"
path = "src/bin/echor.rs"
